[tool.poetry]
name = "sqlalchemy-query-watch"
version = "0.1.0"
description = "Additional query log for SqlAlchemy"
authors = ["Mick Mak <mickmak@oursky.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
sqlalchemy = "2.0.18"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
flake8 = "^6.0.0"
flake8-cognitive-complexity = "0.1.0"
isort = "5.12.0"
safety = "^2.3.5"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
